# collisions4

./: .gitignore  1CMakeLists.txt  CMakeLists-working.txt  CMakeLists.txt  CMakeLists0.txt  CMakeLists00.txt  CMakeLists1.txt  CMakeLists2.txt  CMakeLists3.txt  CMakeLists4.cmake  CMakeLists5AAAAAA.txt  CMakeListsChatGPT.txt  README.md  help.cmake  invsqrttest.cpp  main.cpp  todo.txt
cmake_modules/: FindSFML.cmake
projects/eulersmethod1/: main.cpp
projects/helloworld/: CMakeLists.txt  helloworld.cpp  main.cpp
projects/invSqrtTest/: CMakeLists.txt  invsqrttest.cpp  main.cpp
projects/test1/: CMakeLists.txt  main.cpp
projects/test2/: CMakeLists.txt  main.cpp
projects/test3/: CMakeLists.txt  main.cpp
projects/test4/: CMakeLists.txt  main.cpp
projects/vectortest/: CMakeLists copy.txt  CMakeLists.txt  main copy.cpp  main.cpp
projects/vectortest2/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  src.h
src/data/: CMakeLists.txt  data.h  drawText.cpp  drawText.h  fakedata.h  fonts.cpp  fonts.h  initData.cpp  initdata.h  modeldata.cpp  modeldata.h  modelnd.cpp  modelnd.h  objectnd.cpp  objectnd.h  settings.cpp  settings.h
src/game/: CMakeLists.txt  game.h  loop.cpp  loop.h  script.cpp  script.h
src/init/: CMakeLists.txt  init.h  initObjects1.cpp  initobjects1.h
src/math/: CMakeLists.txt  collisionMath.cpp  collisionOptimizationMath.cpp  collisionmath.h  collisionoptimizationmath.h  gravitionmath.h  gravityMath.cpp  gravitymath.h  invsqrt.cpp  invsqrt.h  math.h  wallCollide.cpp  wallCollide.h
src/render/: CMakeLists.txt  initWindow.cpp  initWindow.h  render.h  render2d.cpp  render2d.h  setup.cpp
